[tool.poetry]
name = "muse-analysis"
version = "0.1.0"
description = ""
authors = ["Brandon Thai Tran <xbrandonthaitran@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
lab = "^6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
